--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "14.2.1",
     "react": "^18",
+    "react-card-flip": "^1.2.2",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-number-format": "^5.3.4"
