--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.0",
+    "framer-motion": "^11.1.2",
+    "gsap": "^3.12.5",
     "next": "14.2.1",
     "react": "^18",
     "react-card-flip": "^1.2.2",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
-    "react-number-format": "^5.3.4"
+    "react-icons": "^5.1.0",
+    "react-intersection-observer": "^9.8.2",
+    "react-number-format": "^5.3.4",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
+    "@types/gsap": "^3.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
